[project]
name = "prompt-visualization"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"},
]
requires-python = ">=3.9"
dependencies = [
    "mlflow>=2.14.1",
    "streamlit>=1.35.0",
    "google-generativeai>=0.5.4",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "blinker>=1.8.2",
    "protobuf==3.20.3",
    "typing-extensions>=4.12.2",
    "cachetools>=5.3.3",
    "click>=8.0",
    "setuptools>=65.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
